<resources>
    <string name="app_name">IIATIMD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_date">Selecteer Datum</string>

    <string name="username">Gebruikersnaam</string>
    <string name="email">E-mailadres</string>
    <string name="password">Wachtwoord</string>
    <string name="password_verification">Wachtwoord (herhaal)</string>
    <string name="sign_up">Registreer</string>
    <string name="sign_in">Log in</string>

    <string name="product_name">Naam</string>
    <string name="expiration_date">Houdbaarheidsdatum</string>
    <string name="expiration_date_hint">Jaar - Maand - Dag </string>
    <string name="note">Notitie</string>
    <string name="add_product">Voeg toe</string>

    <string name="category">Soort</string>
    <string-array name="product_category_array">
        <item>Groente en Fruit</item>
        <item>Vlees, Vis en Vega</item>
        <item>Boter, Eieren, Zuivel en Kaas</item>
        <item>Brood en Gebak</item>
        <item>Drinken</item>
        <item>Drank</item>
        <item>Snacks</item>
        <item>Overig</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_storage_list">MainActivity</string>
    <string name="title_storage_list">Voorraad</string>
    <string name="title_new_product">Nieuw product</string>
    <string name="title_grocery_list">Boodschappenlijst</string>
</resources>