<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.iiatimd.ui.storage_list.HomeFragment"
        android:label="@string/title_storage_list"
        tools:layout="@layout/fragment_storage_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.iiatimd.ui.new_product.NewProduct"
        android:label="@string/title_new_product"
        tools:layout="@layout/fragment_new_product" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.iiatimd.ui.grocery_list.NotificationsFragment"
        android:label="@string/title_grocery_list"
        tools:layout="@layout/fragment_grocery_list" />
</navigation>