<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitButtonSignUp"
                style="@style/ButtonPrimaryStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="Registreer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/inputUsernameSignUp"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/inputEmailSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/inputPasswordVerificationSignUp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/submitButtonSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/inputPasswordSignUp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/inputPasswordVerificationSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/inputEmailSignUp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/inputPasswordSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="110dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/inputPasswordSignUp"
                app:layout_constraintStart_toStartOf="@+id/guideline6" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/inputUsernameSignUp"
                app:layout_constraintStart_toStartOf="@+id/guideline6" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_verification"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/inputPasswordVerificationSignUp"
                app:layout_constraintStart_toStartOf="@+id/guideline6" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/inputEmailSignUp"
                app:layout_constraintStart_toStartOf="@+id/guideline6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="80dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>